; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_ReadBufferWithoutRelcache.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_ReadBufferWithoutRelcache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidBackendId = common dso_local global i32 0, align 4
@InRecovery = common dso_local global i32 0, align 4
@RELPERSISTENCE_PERMANENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReadBufferWithoutRelcache(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @InvalidBackendId, align 4
  %15 = call i32 @smgropen(i32 %13, i32 %14)
  store i32 %15, i32* %12, align 4
  %16 = load i32, i32* @InRecovery, align 4
  %17 = call i32 @Assert(i32 %16)
  %18 = load i32, i32* %12, align 4
  %19 = load i32, i32* @RELPERSISTENCE_PERMANENT, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @ReadBuffer_common(i32 %18, i32 %19, i32 %20, i32 %21, i32 %22, i32 %23, i32* %11)
  ret i32 %24
}

declare dso_local i32 @smgropen(i32, i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @ReadBuffer_common(i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
